Bug 164853 - unusual copy seen in find_if
Summary: unusual copy seen in find_if
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.1 target:24...
Keywords: perf
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2025-01-25 20:18 UTC by Caolán McNamara
Modified: 2025-01-30 08:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
this copy looks dubious (195.43 KB, image/png)
2025-01-25 20:18 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2025-01-25 20:18:09 UTC
Description:
checking some unusual profiling issues I see an odd copy happening during find_if

Steps to Reproduce:
1. profile calc

Actual Results:
unusual copy in find_if

Expected Results:
none of that


Reproducible: Always


User Profile Reset: No

Additional Info:
profile pic to be attached
Comment 1 Caolán McNamara 2025-01-25 20:18:33 UTC
Created attachment 198766 [details]
this copy looks dubious
Comment 2 Commit Notification 2025-01-25 21:39:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d81fc1367653bba68ea08906364d3792dffc4596

Resolves: tdf#164853 find_if causing copy

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-01-27 07:50:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d4d7654c89bb49d52373d09f6143f3a4919f0cf8

Resolves: tdf#164853 find_if causing copy

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-01-27 07:51:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c45954219b6f86382fc1945df011810f6b7dd035

Resolves: tdf#164853 find_if causing copy

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.