Resolves: tdf#164853 find_if causing copy

the pred param of:
  const std::pair<QueryKey, QueryCriteriaAndResult>&
doesn't exactly match what the arg should be, which is
  const std::pair<const QueryKey, QueryCriteriaAndResult>&
so an unecessary copy is silently created, add and use some typedefs
to make this more straightforward.

seen with:

perf record -e mem_load_l3_hit_retired.xsnp_fwd -e mem_load_l3_hit_retired.xsnp_miss

on profiling specifically for contested accesses, see tma_contested_accesses in perf -v

Change-Id: I1d1a57e49a0f2af8bc57ca22ac4572c0246c719b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180755
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>