sc/inc/lookupcache.hxx
@@ -203,7 +203,8 @@ private:
         }
     };
 
-    std::unordered_map< QueryKey, QueryCriteriaAndResult, QueryKey::Hash > maQueryMap;
+    typedef std::unordered_map<QueryKey, QueryCriteriaAndResult, QueryKey::Hash> QueryMap;
+    QueryMap maQueryMap;
     ScRange         maRange;
     ScDocument *    mpDoc;
     ScLookupCacheMap & mCacheMap;
